--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Title</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
-</head>
-
-<body>
-  <p>Hello world</p>
-  <p>Olá!</p>
-</body>
-
+  <body>
+    <p>Hello world</p>
+    <p>Olá!</p>
+    <p>alou</p>
+  </body>
 </html>
